--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,25 +2,61 @@
 @import '../sass/utils/mixins.module';
 
 .home_section {
+  padding-top: 90px;
+  padding-bottom: 50px;
   width: 100vw;
   height: 100vh;
-  padding-top: 160px;
-  padding-bottom: 260px;
   background-color: $black-color;
-  background-image: url('/background_home.jpg');
+  background-image: url('/background-home-mobile.jpg');
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
 }
 
+@media (min-width: 768px) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .home_section {
+      padding-top: 140px;
+      padding-bottom: 60px;
+      background-image: url('/background-home-tablet.jpg');
+    }
+  }
+}
+
+@media (min-width: 1440px) {
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .home_section {
+      background-image: url('/background_home.jpg');
+      padding-top: 160px;
+      padding-bottom: 260px;
+    }
+  }
+}
+
 .home_title {
   position: relative;
-  max-width: 598px;
+  max-width: 335px;
+  @include fontSizeAuto(38px, 40px);
   font-weight: 500;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.38px;
   color: $white-color;
-  margin-bottom: 64px;
-  @include fontSizeAuto(70px, 78px);
+  margin-bottom: 40px;
+
+  @include mediaQuery(768px) {
+    @include fontSizeAuto(70px, 78px);
+    max-width: 598px;
+    letter-spacing: 0.7px;
+    margin-bottom: 64px;
+    @include fontSizeAuto(70px, 78px);
+  }
+
+  @include mediaQuery(1440px) {
+    @include fontSizeAuto(70px, 78px);
+  }
 }
 
 .home_title::after {
@@ -48,7 +84,8 @@
 }
 
 .home_auth_link {
-  padding: 16px 60px;
+  text-align: center;
+  padding: 12px 30px;
   color: $white-color;
   border: 1px solid $borde-color;
   cursor: pointer;
@@ -63,6 +100,16 @@
   -ms-transition: $transition;
   -o-transition: $transition;
   @include flexCenter();
+  @include fontSizeAuto(20px, 24px);
+  font-weight: 500;
+
+  @include mediaQuery(768px) {
+    @include fontSizeAuto(16px, 18px);
+  }
+
+  @include mediaQuery(1440px) {
+    padding: 16px 60px;
+  }
 }
 
 .home_auth_link:hover {
