--- a/src/Components/Header/_header.module.scss
+++ b/src/Components/Header/_header.module.scss
@@ -1,8 +1,8 @@
+@import '../../sass/utils/variables.module';
+@import '../../sass/utils/mixins.module';
+
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  background-color: $black-color;
   padding-top: 34px;
   padding-bottom: 34px;
 }
