--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,16 @@
 @import '../sass/utils/variables.module';
 @import '../sass/utils/mixins.module';
+@import 'react-calendar/dist/Calendar.css';
+
+.react-calendar__tile--active {
+  background-color: $black-color !important;
+  border-radius: 50% !important;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  -ms-border-radius: 50% !important;
+  -o-border-radius: 50% !important;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
