--- a/src/Components/Profile/ProfileForm/_ProfileForm.module.scss
+++ b/src/Components/Profile/ProfileForm/_ProfileForm.module.scss
@@ -23,12 +23,21 @@
   gap: 14px;
   flex-wrap: wrap;
   margin-bottom: 20px;
+  width: 100%;
+
+  @include mediaQuery(768px) {
+    justify-content: space-between;
+  }
 }
 
 .form_block_three {
   display: flex;
   gap: 8px;
   margin-bottom: 42px;
+
+  @include mediaQuery(768px) {
+    margin-bottom: 32px;
+  }
 }
 
 .form_group_five {
@@ -37,6 +46,10 @@
   align-self: start;
   gap: 8px;
   margin-bottom: 52px;
+
+  @include mediaQuery(768px) {
+    margin-bottom: 38px;
+  }
 }
 
 .profile_form_group_one {
@@ -108,19 +121,6 @@
 }
 
 .span_one_form_placeholder {
-  position: absolute;
-  left: 14px;
-  top: 50%;
-  color: rgba(239, 237, 232, 0.6);
-  transform: translate(0, -50%);
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  @include fontSizeAuto(14px, 18px);
-}
-
-.span_one_form_placeholder {
   pointer-events: none;
   position: absolute;
   left: 14px;
@@ -132,6 +132,10 @@
   -ms-transform: translate(0, -50%);
   -o-transform: translate(0, -50%);
   @include fontSizeAuto(14px, 18px);
+
+  @include mediaQuery(768px) {
+    @include fontSizeAuto(16px, 24px);
+  }
 }
 
 .label_radio {
