--- a/src/app/profile/_ProfilePage.module.scss
+++ b/src/app/profile/_ProfilePage.module.scss
@@ -5,4 +5,31 @@
   background-color: $black-color;
   width: 100vw;
   min-height: 100vh;
+  padding-top: 40px;
+  padding-bottom: 66px;
+
+  @include mediaQuery(768px) {
+    padding-top: 72px;
+    padding-bottom: 54px;
+  }
+
+  @include mediaQuery(1440px) {
+    padding-bottom: 44px;
+  }
+}
+
+.profile_title {
+  margin-bottom: 40px;
+  color: $white-color;
+  @include fontSizeAuto(24px, 28px);
+  font-weight: 700;
+
+  @include mediaQuery(768px) {
+    @include fontSizeAuto(32px, 44px);
+    margin-bottom: 64px;
+  }
+
+  @include mediaQuery(768px) {
+    margin-bottom: 32px;
+  }
 }
