--- a/src/Components/Auth/LoginForm/_LoginForm.module.scss
+++ b/src/Components/Auth/LoginForm/_LoginForm.module.scss
@@ -140,11 +140,24 @@
   }
 }
 
+.success_text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 3px;
+  color: green;
+}
+
 .validation_error {
-  max-width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   color: red;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3px;
   text-align: center;
 }
 
