--- a/src/Components/DataUsers/DataUserStepOne/_DataUserStepOne.module.scss
+++ b/src/Components/DataUsers/DataUserStepOne/_DataUserStepOne.module.scss
@@ -124,9 +124,30 @@
   cursor: pointer;
 }
 
+// .validation_error {
+//   position: absolute;
+//   bottom: -14px;
+//   left: 5px;
+//   color: #ff0000;
+//   font-size: 10px;
+// }
+.success_text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 3px;
+  color: green;
+}
+
 .validation_error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
   position: absolute;
-  bottom: -14px;
+  bottom: -17px;
   left: 5px;
   color: #ff0000;
   font-size: 10px;
