--- a/src/Components/DataUsers/DataUserStepOne/_DataUserStepOne.module.scss
+++ b/src/Components/DataUsers/DataUserStepOne/_DataUserStepOne.module.scss
@@ -124,20 +124,19 @@
   cursor: pointer;
 }
 
-// .validation_error {
-//   position: absolute;
-//   bottom: -14px;
-//   left: 5px;
-//   color: #ff0000;
-//   font-size: 10px;
-// }
+.form_placeholder_hidden {
+  display: none;
+}
+
 .success_text {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   margin-top: 3px;
   color: green;
+  font-size: 10px;
 }
 
 .validation_error {
@@ -145,9 +144,8 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  text-align: center;
   position: absolute;
-  bottom: -17px;
+  bottom: -23px;
   left: 5px;
   color: #ff0000;
   font-size: 10px;
