added functional upload avatar to db and update user,create upload rout,fix next config

--- a/src/Components/Profile/ProfileCard/_ProfileCard.module.scss
+++ b/src/Components/Profile/ProfileCard/_ProfileCard.module.scss
@@ -10,7 +10,9 @@
 }
 
 .user_photo_block {
+  display: block;
   position: relative;
+  cursor: pointer;
   width: 90px;
   height: 90px;
   border-radius: 50%;
@@ -29,6 +31,19 @@
     height: 150px;
     margin-bottom: 18px;
   }
+}
+
+.updateUserInputImage {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 .user_img {
