create custom hook close modal on click esc ,creare component modal,create interseption and parallel routs for modal product,create component product list

--- a/src/app/products/_product.module.scss
+++ b/src/app/products/_product.module.scss
@@ -14,6 +14,7 @@
       background-image: url('/product-page-background.jpg');
       background-repeat: no-repeat;
       background-position: right;
+      background-size: contain;
       padding-top: 68px;
       padding-bottom: 81px;
     }
