--- a/src/sass/utils/_variables.module.scss
+++ b/src/sass/utils/_variables.module.scss
@@ -3,7 +3,7 @@ $orange-color: #e6533c;
 $light-orange-color: #ef8964;
 $beige-color: #efa082;
 $white-color: #efede8;
-
+$fon-modal:#10100F;
 $transition: 0.4s;
 
 $border-radius-btn: 12px;
