--- a/src/Components/Product/ProductFilter/_product_filter.module.scss
+++ b/src/Components/Product/ProductFilter/_product_filter.module.scss
@@ -32,6 +32,7 @@
 
   @media (min-width: 768px) {
     flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -41,6 +42,30 @@
 
   @media (min-width: 768px) {
     width: auto;
+  }
+}
+
+.product_page_filter_create_link {
+  display: flex;
+  color: $white-color;
+  padding: 14px;
+  position: relative;
+  margin-right: 10px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -5px;
+    transform: translate(0, -50%);
+    display: block;
+    background-image: url('/next.svg');
+    width: 16px;
+    height: 16px;
+    -webkit-transform: translate();
+    -moz-transform: translate();
+    -ms-transform: translate();
+    -o-transform: translate();
   }
 }
 
@@ -56,6 +81,10 @@
   border: 1px solid $borde-color;
   color: $white-color;
   appearance: none;
+
+  &:focus {
+    outline: 1px solid $orange-color;
+  }
 
   @media (min-width: 768px) {
     width: auto;
@@ -108,6 +137,10 @@
   color: $white-color;
   appearance: none;
   cursor: pointer;
+
+  &:focus {
+    outline: 1px solid $orange-color;
+  }
 
   @media (min-width: 768px) {
     width: auto;
