--- a/src/Components/Product/ProductForm/_product_form.module.scss
+++ b/src/Components/Product/ProductForm/_product_form.module.scss
@@ -2,6 +2,7 @@
 @import '../../../sass/utils/mixins.module';
 
 .form_container {
+  position: relative;
   max-width: 480px;
   width: 100%;
   margin-left: auto;
@@ -14,6 +15,13 @@
   -moz-border-radius: $border-radius-btn;
   -ms-border-radius: $border-radius-btn;
   -o-border-radius: $border-radius-btn;
+}
+
+.closed_icon {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  cursor: pointer;
 }
 
 .form_create_product {
@@ -83,5 +91,57 @@
     -moz-transition: $transition;
     -ms-transition: $transition;
     -o-transition: $transition;
+  }
+}
+
+.product_recommend_check {
+  position: relative;
+  border: 2px solid #636366;
+  cursor: pointer;
+  appearance: none;
+  width: 17px;
+  height: 17px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+
+  @include mediaQuery(768px) {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.product_recommend_check:checked::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  background-color: $light-orange-color;
+}
+
+.product_recommend_link {
+  @include fontSizeAuto(9px, 12px);
+  margin-top: 10px;
+  color: $orange-color;
+  text-decoration: underline;
+  transition: $transition;
+  -webkit-transition: $transition;
+  -moz-transition: $transition;
+  -ms-transition: $transition;
+  -o-transition: $transition;
+
+  &:hover {
+    color: $light-orange-color;
   }
 }
