--- a/src/Components/Diary/ProductDiaryList/_product_diary_list.module.scss
+++ b/src/Components/Diary/ProductDiaryList/_product_diary_list.module.scss
@@ -125,6 +125,9 @@
   flex-direction: column;
   gap: 40px;
   height: 774px;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -webkit-scrollbar-width: none;
 
   @include mediaQuery(768px) {
     overflow-y: auto;
@@ -312,16 +315,14 @@
   }
 }
 
-.deleted_diary_product_loader {
-  color: $white-color;
-  margin-top: auto;
-  margin-bottom: 10px;
+.not_found_products {
+  width: 100%;
+  height: 100vh;
+  @include flexCenter();
+  @include fontSizeAuto(14px, 18px);
+  color: $borde-color;
 
   @include mediaQuery(768px) {
-    margin-left: 4px;
-  }
-
-  @include mediaQuery(1200px) {
-    margin-left: 12px;
+    @include fontSizeAuto(16px, 24px);
   }
 }
