--- a/src/Components/Header/MobileMenu/_MobileMenu.module.scss
+++ b/src/Components/Header/MobileMenu/_MobileMenu.module.scss
@@ -15,6 +15,7 @@
   padding-bottom: 20px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 
   @include mediaQuery(768px) {
     display: none;
@@ -36,7 +37,7 @@
 }
 
 .mobile_nav_list_item {
-  padding: 10px 27px;
+  width: 119px;
   border-radius: $border-radius-btn;
   -webkit-border-radius: $border-radius-btn;
   -moz-border-radius: $border-radius-btn;
@@ -56,6 +57,11 @@
 .mobile_nav_list_item:hover {
   background-color: $white-color;
   color: $black-color;
+}
+
+.mobile_link {
+  @include flexCenter();
+  padding: 10px 27px;
 }
 
 .activeLink {
