--- a/src/Components/Product/ProductForm/_product_form.module.scss
+++ b/src/Components/Product/ProductForm/_product_form.module.scss
@@ -61,7 +61,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  color: red;
+  color: $error-color;
   margin-left: auto;
   margin-right: auto;
   margin-top: 3px;
