--- a/src/app/profile/_ProfilePage.module.scss
+++ b/src/app/profile/_ProfilePage.module.scss
@@ -13,7 +13,7 @@
     padding-bottom: 54px;
   }
 
-  @include mediaQuery(1440px) {
+  @include mediaQuery(1150px) {
     padding-bottom: 44px;
   }
 }
@@ -29,13 +29,13 @@
     margin-bottom: 64px;
   }
 
-  @include mediaQuery(1440px) {
+  @include mediaQuery(1150px) {
     margin-bottom: 58px;
   }
 }
 
 .profile_basic_block {
-  @include mediaQuery(1440px) {
+  @include mediaQuery(1150px) {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -43,8 +43,13 @@
 }
 
 .profile_basic_block_cart {
-  @include mediaQuery(1440px) {
+  @include mediaQuery(1150px) {
+    margin-left: 50px;
     padding-left: 50px;
     border-left: 1px solid rgba(239, 237, 232, 0.2);
+  }
+
+  @include mediaQuery(1440px) {
+    margin-left: 0;
   }
 }
