--- a/src/sass/utils/_variables.module.scss
+++ b/src/sass/utils/_variables.module.scss
@@ -3,18 +3,11 @@ $orange-color: #e6533c;
 $light-orange-color: #ef8964;
 $beige-color: #efa082;
 $white-color: #efede8;
-$fon-modal:#10100F;
+$fon-modal: #10100f;
+$success-color: #3cbf61;
+$error-color: #e9101d;
 $transition: 0.4s;
 
 $border-radius-btn: 12px;
 $borde-color: rgba(239, 237, 232, 0.3);
 $item-block-color: rgba(239, 237, 232, 0.05);
-
-:export {
-  blackColor: $black-color;
-  orangeColor: $orange-color;
-  lightOrangeColor: $light-orange-color;
-  beigeColorr: $beige-color;
-  whiteColor: $white-color;
-  borderColor: $borde-color;
-}
