created pagination for exercisess,created custom hooks useisactiv ,usetabletperpage,created redux slice for pagination ,fix styles

--- a/src/sass/utils/_variables.module.scss
+++ b/src/sass/utils/_variables.module.scss
@@ -11,3 +11,4 @@ $transition: 0.4s;
 $border-radius-btn: 12px;
 $borde-color: rgba(239, 237, 232, 0.3);
 $item-block-color: rgba(239, 237, 232, 0.05);
+$pagination-color: rgba(239, 237, 232, 0.1);
