--- a/src/Components/Exercises/ExercisesList/_exercises_list.module.scss
+++ b/src/Components/Exercises/ExercisesList/_exercises_list.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+  // margin-top: 154px;
 
   @include mediaQuery(485px) {
     flex-direction: row;
